--- a/package.json
+++ b/package.json
@@ -40,8 +40,13 @@
     "core-js": "^3.35.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.0",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "rehype-raw": "^7.0.0",
+    "slugify": "^1.6.6",
+    "use-resize-observer": "^9.1.0"
   }
 }
