--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,10 +1,8 @@
 name: Build and Deploy
 
 on:
-  push:
-    branches: [ "develop" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main" ]
 
 permissions:
   contents: write
