--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,8 +1,10 @@
 name: Build and Deploy
 
 on:
+  push:
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 permissions:
   contents: write
