--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -28,7 +28,7 @@ jobs:
           run: npm run build
     
         - name: Deploy to GitHub Pages
-          if: github.ref == 'refs/heads/develop'
+          if: github.ref == 'refs/heads/main'
           uses: JamesIves/github-pages-deploy-action@v4.4.3
           with:
             branch: gh-pages
