--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,9 +2,9 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 permissions:
   contents: write
@@ -28,7 +28,7 @@ jobs:
           run: npm run build
     
         - name: Deploy to GitHub Pages
-          if: github.ref == 'refs/heads/main'
+          if: github.ref == 'refs/heads/develop'
           uses: JamesIves/github-pages-deploy-action@v4.4.3
           with:
             branch: gh-pages
