--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -16,10 +16,10 @@ jobs:
       steps:
         - uses: actions/checkout@v4
     
-        - name: Use Node.js ${{ matrix.node-version }}
+        - name: Use Node.js 
           uses: actions/setup-node@v3
           with:
-            node-version: ${{ matrix.node-version }}
+            node-version: "16.x"
     
         - name: Install dependencies
           run: npm install
