--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@mdx-js/react": "^3.0.1",
     "@mui/joy": "^5.0.0-beta.27",
     "core-js": "^3.35.1",
+    "html-react-parser": "^5.2.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
