--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": "true",
+  "private": true,
   "homepage": "https://fabric-testbed.github.io/knit-website/",
   "scripts": {
     "start": "SERVE=true webpack serve",
